--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,18 @@
     font-family: "Inter", sans-serif;
 }
 
+blockquote {
+    color: rgba(0,0,0,.5);
+    padding-left: 1.5em;
+    border-left: 5px solid rgba(0,0,0,.1);
+}
+
 .navbar {
     background: #ffffff;
     overflow: hidden;
     position: fixed;
     top: 0;
-    width: auto;
+    width: 100%;
 }
 
 .navbar a {
@@ -118,17 +124,17 @@ h1 {
 }
 
 h2 {
-    font-size: 3em;
+    font-size: 2em;
     font-weight: bold;
 }
 
 h3 {
-    font-size: 2.5em;
+    font-size: 1.5em;
     font-weight: bold;
 }
 
 h4 {
-    font-size: 2em;
+    font-size: 1.3em;
     font-weight: bold;
 }
 
@@ -137,7 +143,8 @@ ul {
 }
 
 .kontent {
-    line-height: 2
+    line-height: 2.2;
+    font-size: 1.1em
 }
 
 .marginleft {
@@ -169,9 +176,19 @@ ul {
     width: 30%;
 }
 
+.right {
+    right: 0;
+}
+
+.left {
+    left: 0;
+}
+
 .linkedtext {
     text-decoration: none;
     color: #6d6d6d;
+    font-size: 1.1em;
+    line-height: 1.5
 }
 
 .linkedtext:hover {
